<resources>
    <string name="app_name">Calculadora_App</string>
    <string name="_0">0</string>
    <string name="salir">Salir</string>
    <string name="x_y">X^Y</string>
    <string name="raiz">√</string>
    <string name="func">Func</string>
    <string name="x_2">x^2</string>
    <string name="c">C</string>
    <string name="del">DEL</string>
    <string name="div">÷</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="por">×</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="guion">-</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="mas">+</string>
    <string name="menosmas">+/-</string>
    <string name="punt">.</string>
    <string name="ig">=</string>
</resources>
